// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <textarea
        className="input"
        cols={null}
        disabled={false}
        id="test"
        onChange={null}
        placeholder={null}
        required={false}
        rows={3}
      />
    </div>
  </label>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        isRootFullWidth
        rootLayoutHorizontal
        isRootRequired
        rootSizeLarge
        isRootStateInvalid
        rootVariantFilled"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label
                isLabelHidden"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <textarea
        className="input"
        cols={10}
        disabled={true}
        id="test"
        onChange={null}
        placeholder="placeholder"
        required={true}
        rows={5}
        value="value"
      />
      <div
        className="bottomLine"
      />
    </div>
  </label>
  <div
    className="helperText"
  >
    some help
  </div>
</div>
`;

exports[`rendering renders correctly with hidden label 1`] = `
<div
  className="root
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
>
  <label
    className="container"
    htmlFor="test"
  >
    <div
      className="label
                isLabelHidden"
    >
      label
    </div>
    <div
      className="inputContainer"
    >
      <textarea
        className="input"
        cols={null}
        disabled={false}
        id="test"
        onChange={null}
        placeholder={null}
        required={false}
        rows={3}
      />
    </div>
  </label>
</div>
`;
